testdata/trans/ok/multipkgs/src/b/ok2.go
package b

import (
	"fmt"
)

func Bar() (string, error) {
	try(Foo())
	n := try(Foo())
	n = try(Foo())
	return fmt.Sprint(n), nil
}
