testdata/trans/error/noreturn/err.go
package foo

import (
	"fmt"
)

func f() {
	try(fmt.Println("hello"))
}
